--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,20 @@
 <h1>Books#index</h1>
 <p>Find me in app/views/books/index.html.erb</p>
+
+<table class="listing" summary="Book list">
+    <tr class="header">
+      <th>ID</th>
+      <th>Title</th>
+      <th>Available</th>
+      <th>Checked Out</th>
+    </tr>
+    <% @books.each do |book| %>
+    <tr>
+      <td><%= book.id %></td>
+      <td><%= book.title %></td>
+      <td><%= book.available? %></td>
+      <td><%= book.date_time_checked_out%></td>
+      <td><%= button_tag 'Add to cart'%></td>
+    </tr>
+    <% end %>
+  </table>
