Add devise gem to handle admin authentication

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,10 @@
 </head>
 <body>
 
-<%= yield %>
+  <!-- Devise flash messages to alert user if something went wrong -->
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+  <%= yield %>
 
 </body>
 </html>
