add buttons that link books to users in database

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,6 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<h1>Catalog</h1>
+<p>Welcome to the eLibrary!</p>
+<p>Cart: <%= @cart %></p>
 
 <table class="listing" summary="Book list">
     <tr class="header">
@@ -14,7 +15,7 @@
       <td><%= book.title %></td>
       <td><%= book.available? %></td>
       <td><%= book.date_time_checked_out%></td>
-      <td><%= button_tag 'Add to cart'%></td>
+      <td><%= button_to("Add to Cart", { :action => "edit", :id => book.id }, :method => :get)%></td>
     </tr>
     <% end %>
   </table>
