--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
-<%= %>
+<h1>Cart</h1>
+<p><%= @message %></p>
+<p><%= link_to("<< Back to Catalog", books_path)%></p>
