Add checkout, return features, mostly cleanup and debugging

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,20 @@
  *= require_self
  *= require_tree .
  */
+ body{
+   text-align: center;
+ }
+
+ form {
+   text-align: center;
+ }
+
+ table{
+   text-align: left;
+ }
+
+ /* Classes */
+
+ .devise-link{
+   text-align: center;
+ }
