--- a/app/views/registered_users/index.html.erb
+++ b/app/views/registered_users/index.html.erb
@@ -1,24 +1,32 @@
-<h1>Registered Users</h1>
-<table>
-  <tr class="header">
-    <th>First Name</th>
-    <th>Last Name</th>
-    <th>Email</th>
-    <th>Phone Number</th>
-    <th>Address</th>
-    <th>City</th>
-    <th>State</th>
-    <!-- Books they checked out -->
-  </tr>
-  <% @all_users.each do |user| %>
+<%= render "/navbar" %>
+<h1 class="text-center">Registered Users</h1>
+
+<table class="table">
+  <thead>
     <tr>
-      <td><%= user.first_name %></td>
-      <td><%= user.last_name %></td>
-      <td><%= user.email %></td>
-      <td><%= user.phone_number %></td>
-      <td><%= user.address %></td>
-      <td><%= user.city %></td>
-      <td><%= user.state %></td>
+      <th scope="col">First Name</th>
+      <th scope="col">Last Name</th>
+      <th scope="col">Email</th>
+      <th scope="col">Phone Number</th>
+      <th scope="col">Address</th>
+      <th scope="col">City</th>
+      <th scope="col">State</th>
+      <th scope="col">Library Card Number</th>
     </tr>
-  <% end %>
+  </thead>
+  <tbody>
+    <% @all_users.each do |user| %>
+      <tr>
+        <td><%= user.first_name %></td>
+        <td><%= user.last_name %></td>
+        <td><%= user.email %></td>
+        <td><%= user.phone_number %></td>
+        <td><%= user.address %></td>
+        <td><%= user.city %></td>
+        <td><%= user.state %></td>
+        <td><%= user.card_number %></td>
+        <td><%= link_to "User Details", registered_user_path(user.id) %></td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
