--- a/app/views/registered_users/registrations/new.html.erb
+++ b/app/views/registered_users/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<%= render "/navbar" %>
 <h2>Register</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -49,6 +50,18 @@
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  </div>
+
+  <!-- Hidden field for role goes here -->
+  <div class="actions">
+    <%= f.hidden_field :role, value: 2 %>
+  </div>
+
+  <!-- Another hidden field for generating a random library card number -->
+  <div class="actions">
+    <% charset = Array('0'..'9') %>
+    <% card_number = Array.new(8) { charset.sample }.join %>
+    <%= f.hidden_field :card_number, value: card_number %>
   </div>
 
   <div class="actions">
