--- a/app/views/books/reserve.html.erb
+++ b/app/views/books/reserve.html.erb
@@ -1,5 +1,8 @@
 <%= render "/navbar" %>
-<h1 class="text-center">Your Cart</h1>
+
+<h1><%= @success_message %></h1>
+
+<h2 class="text-center">Your Cart</h2>
 <table class="table">
   <thead>
     <tr>
@@ -13,10 +16,8 @@
         <tr>
           <td><%= book.id %></td>
           <td><%= book.title %></td>
-          <td><%= button_to("Remove from Cart", "/books/remove_from_cart/" + book.id.to_s, :method => :get) %></td>
         </tr>
       <% end %>
     <% end %>
   </tbody>
 </table>
-<%= button_to "Reserve Book(s)", "/books/reserve", method: :get %>
