--- a/app/views/registered_users/index.html.erb
+++ b/app/views/registered_users/index.html.erb
@@ -4,6 +4,7 @@
 <table class="table">
   <thead>
     <tr>
+      <th scope="col">Role</th>
       <th scope="col">First Name</th>
       <th scope="col">Last Name</th>
       <th scope="col">Email</th>
@@ -17,6 +18,11 @@
   <tbody>
     <% @all_users.each do |user| %>
       <tr>
+        <% if user.role == 1 %>
+          <td><%= tag_label('Admin', :danger) %></td>
+        <% else %>
+          <td><%= tag_label('User', :success) %></td>
+        <% end %>
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
         <td><%= user.email %></td>
