--- a/app/views/registered_users/return_books.html.erb
+++ b/app/views/registered_users/return_books.html.erb
@@ -1,2 +1,18 @@
 <%= render "/navbar" %>
-<%= @success_message %>
+<h1><%= @success_message %></h1>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Title</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @books.each do |book| %>
+      <tr>
+        <td><%= book.id %></td>
+        <td><%= book.title %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
